[package]
name = "longest-increasing-subsequence"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dependencies]

[dev-dependencies]
quickcheck = "0.8.2"
criterion = "0.2.10"
rand = "0.6.5"
