[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["algorithms"]
description = "Find a longest increasing subsequence of some input sequence"
documentation = "https://docs.rs/longest-increasing-subsequence"
edition = "2018"
license = "MIT/Apache-2.0"
name = "longest-increasing-subsequence"
readme = "README.md"
repository = "https://github.com/fitzgen/longest-increasing-subsequence"
version = "0.1.0"

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dependencies]

[dev-dependencies]
quickcheck = "0.8.2"
criterion = "0.2.10"
rand = "0.6.5"
